syntax = "proto3";

package protos;

import "messages.proto";

service Indicadores {
  rpc ObtemIndicadores (PpgRequest) returns (PpgResponse);
}

service Bancas {
  rpc ObtemBancas (PpgRequest) returns (PpgResponse);
}

service Docentes {
  rpc ObtemDocentes (PpgRequest) returns (PpgResponse);
}

service Egressos {
  rpc ObtemEgressos (PpgRequest) returns (PpgResponse);
}

service Geral {
  rpc ObtemGeral (PpgRequest) returns (PpgResponse);
}

service Projetos {
  rpc ObtemProjetos (PpgRequest) returns (PpgResponse);
}

service Tarefas {
  rpc ObtemTarefas (PpgRequest) returns (PpgResponse);
}