"use server";
import { LoginRequest, LoginResponse } from "@/protos/messages_pb";
import { stubUsuarios, verificarConexaoGRPC } from "./utils";

export async function autenticarUsuario(email: string, senha: string) {
  try {
    // Verifica a conex√£o com o servidor gRPC antes de prosseguir
    await verificarConexaoGRPC();

    const usuarioRequest = new LoginRequest();
    usuarioRequest.setUsername(email);
    usuarioRequest.setPassword(senha);

    const response = await new Promise<LoginResponse.AsObject>(
      (resolve, reject) => {
        stubUsuarios.login(usuarioRequest, (error, usuario) => {
          if (error) {
            console.error("Erro na comunica√ß√£o gRPC:", error);
            reject(new Error("Falha na autentica√ß√£o. Verifique seus dados."));
          } else {
            const usuarioObj = usuario?.toObject ? usuario.toObject() : null;
            if (!usuarioObj) {
              reject(new Error("Resposta inv√°lida do servidor gRPC"));
            }
            resolve(usuarioObj);
          }
        });
      }
    );

    return JSON.parse(JSON.stringify(response)); // üîπ Garante que √© um objeto simples
  } catch (e) {
    console.error("üö® Erro inesperado na autentica√ß√£o:", e);
    return new Error("Erro ao tentar autenticar");
  }
}
